feat: update host, api path and figure text
